--- a/about.css
+++ b/about.css
@@ -64,7 +64,7 @@
     display: block;
     width: 100%;
     height: 10px;
-    background-color: #9b9b9b; /* Neutral background */
+    background-color: #aaaaaa; /* Neutral background */
     border-radius: 5px;
     position: relative;
     overflow: hidden;
@@ -74,34 +74,28 @@
     content: '';
     display: block;
     height: 100%;
-    background: linear-gradient(to right, var(--primary-accent), #8c2b7a, #ff4d5a); /* Match with accent color */
+    background: linear-gradient(to right, var(--primary-accent), var(--secondary-accent)); /* Match with accent color */
     border-radius: 5px;
 }
 
 .progress-bar[data-skill="DaVinci_Resolve"]::after {
     width: 82%;
 }
-
 .progress-bar[data-skill="Audacity"]::after {
     width: 70%;
 }
-
 .progress-bar[data-skill="Inkscape"]::after {
     width: 70%;
 }
-
 .progress-bar[data-skill="HTML"]::after {
     width: 60%;
 }
-
 .progress-bar[data-skill="CSS"]::after {
     width: 30%;
 }
-
 .progress-bar[data-skill="MSoffice"]::after {
     width: 70%;
 }
-
 .progress-bar[data-skill="Linux"]::after {
     width: 73%;
 }
@@ -118,7 +112,7 @@
     width: 93%;
 }
 .progress-bar[data-skill="Spanish"]::after {
-    width: 10%;
+    width: 25%;
 }
 
 /*Introduction*/
@@ -150,37 +144,6 @@
     gap: 5px;
 }
 
-
-/*--- FOR LATER!!! ---*/
-.cylinder-div {
-    border-radius: 12px;
-    background-color: var(--primary-bg); /* Keep the light background */
-    text-align: justify;
-    padding: 20px;
-    margin: 15px 0;
-    
-    /* Enhanced shadow for a "popping out" effect */
-    box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2), /* Main shadow */
-                0px 0px 5px rgba(255, 255, 255, 0.6) inset; /* Inner glow for subtle lift */
-
-    /* Optional gradient effect for the top to simulate light */
-    background-image: linear-gradient(to top, rgba(255, 255, 255, 0.15), rgba(255, 255, 255, 0));
-}
-
-.plate {
-    text-align: center;
-    background-color: var(--neutral-bg-solid); /* Use light background from styles2.css */
-    padding: 5px;
-    border-radius: 12px; /* Match border radius with the main styles */
-    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1); /* Match box shadow style */
-    color: var(--primary-text); /* Consistent text color */
-    max-width: fit-content;
-    transition: transform 0.2s ease-in-out; /* Add a subtle hover effect */
-}
-.plate:hover {
-    transform: translateY(-5px); /* Slight lift on hover */
-}
-
 @media only screen and (max-width: 680px) {
     .intro-video {
         max-width: 100%;
@@ -188,7 +151,7 @@
 }
 
 /* Introsection */
-@media only screen and (max-width: 677px /*749px*/) {
+@media only screen and (max-width: 749px) {
     .box0 {
         display: flex; 
         flex-wrap: wrap;
@@ -203,5 +166,8 @@
     }
     .language {
         flex-direction: row; 
+    }
+    .lg {
+        width: 100%;
     }
 }
