--- a/styles2.css
+++ b/styles2.css
@@ -180,6 +180,20 @@ summary:hover {
     cursor: pointer;
 }
 
+.plate {
+    text-align: center;
+    background-color: var(--neutral-bg-solid); /* Use light background from styles2.css */
+    padding: 5px;
+    border-radius: 12px; /* Match border radius with the main styles */
+    box-shadow: 0 6px 10px rgba(0, 0, 0, 0.1); /* Match box shadow style */
+    color: var(--primary-text); /* Consistent text color */
+    max-width: fit-content;
+    transition: transform 0.2s ease-in-out; /* Add a subtle hover effect */
+}
+.plate:hover {
+    transform: translateY(-5px); /* Slight lift on hover */
+}
+
 /* Scroll Bar */
 body::-webkit-scrollbar {
     width: var(--scrollbar-size);
@@ -243,3 +257,4 @@ body::-webkit-scrollbar-thumb {
     }
     
 }
+
